Organiza, renomeia e melhora exemplos funcionais. Adicona novas exemplos
Signed-off-by: Manoel Campos <manoelcampos@gmail.com>