@@ -17,15 +17,71 @@ public class AppProgramacaoFuncional {
         System.out.println();
 
         imprimeMaiorNota();
+        imprimeMaiorNotaHomens();
         imprimeTotalHomens();
         imprimeTotalMulheres();
-        imprimeTotalCampiComAlunos();
+        imprimeMediaNotas();
         imprimeTotalEstudantesMatriculados();
+        imprimeTotalCampiComAlunos();
         imprimeEstudantesAprovadosTSI();
-        imprimeEstudantesPorCurso();
+        imprimeEstudantesAgrupandoPorCurso();
         imprimeEstudantesAprovadosPalmas();
         imprimeTotalEstudantesPorCurso();
+        imprimeMediaNotasAgrupandoPorSexo();
         imprimeEstudantesPorSexo();
+    }
+
+    private void imprimeMaiorNota() {
+        final double maior =
+                students.stream()
+                        .mapToDouble(Student::getScore)
+                        .max()
+                        .orElse(0);
+        System.out.printf("Maior nota entre todos os Estudantes: %.2f\n", maior);
+    }
+
+    private void imprimeMaiorNotaHomens() {
+        final double maior =
+                students.stream()
+                        .filter(s -> s.getGender() == 'M')
+                        .mapToDouble(Student::getScore)
+                        .max()
+                        .orElse(0);
+        System.out.printf("Maior nota entre todos os Estudantes: %.2f\n", maior);
+    }
+
+    private void imprimeTotalHomens() {
+        final long totalHomens =
+                students.stream()
+                        .filter(s -> s.getGender() == 'M')
+                        .count();
+        System.out.println("Total de Homens: " + totalHomens);
+    }
+
+    private void imprimeTotalMulheres() {
+        final long totalMulheres =
+                students.stream()
+                        .filter(s -> s.getGender() == 'F')
+                        .count();
+        System.out.println("Total de Mulheres: " + totalMulheres);
+    }
+
+    private void imprimeMediaNotas() {
+        final double mediaNotas =
+                students.stream()
+                        .mapToDouble(Student::getScore)
+                        .average()
+                        .orElse(0);
+        System.out.println("Média das notas: " + mediaNotas);
+    }
+
+    private void imprimeTotalEstudantesMatriculados() {
+        final long totalEstudantesMatriculados =
+                students.stream()
+                        .map(Student::getCourse)
+                        .filter(Objects::nonNull)
+                        .count();
+        System.out.printf("Total de Estudantes Matriculados: %d\n", totalEstudantesMatriculados);
     }
 
     private void imprimeEstudantesPorSexo() {
@@ -47,48 +103,46 @@ public class AppProgramacaoFuncional {
         );
     }
 
+    private void imprimeMediaNotasAgrupandoPorSexo() {
+        Map<Character, Double> mapMediaPorSexo =
+                students.stream()
+                        .collect(Collectors.groupingBy(Student::getGender, Collectors.averagingDouble(Student::getScore)));
+        mapMediaPorSexo.forEach((sexo, media) -> System.out.printf("%c: %.2f%n", sexo, media));
+    }
+
     private void imprimeEstudantesAprovadosPalmas() {
         System.out.println();
         final String nomesEstudantesAprovados =
                 students.stream()
                         .filter(s -> s.getScore() > 9)
-                        .filter(s -> s.getCourse() != null)
+                        .filter(Student::hasCourse)
                         .filter(s -> s.getCourse().getCampus().getId() == 1)
                         .map(Student::getName)
                         .collect(Collectors.joining(", "));
         System.out.println("Nomes dos Estudantes Aprovados em Palmas com nota maior que 9: " + nomesEstudantesAprovados);
     }
 
-    private void imprimeEstudantesPorCurso() {
-        final Map<Course, List<Student>> estudantesAgrupadosPorCurso =
-                students.stream()
-                        .filter(s -> s.getCourse() != null)
-                        .collect(Collectors.groupingBy(Student::getCourse));
-        System.out.println("\nEstudantes por curso");
-        estudantesAgrupadosPorCurso.forEach(
-                (course, students) -> System.out.printf("\t%-30s: Estudantes: %s\n", course.getName(), students)
-        );
-    }
-
     private void imprimeEstudantesAprovadosTSI() {
         final List<Student> alunosSistemasInternet =
                 students.stream()
-                        .filter(s -> s.getCourse() != null)
+                        .filter(Student::hasCourse)
                         .filter(s -> s.getCourse().getId() == 1)
                         .filter(s -> s.getScore() >= 6)
-                        .collect(Collectors.toList());
+                        .toList();
         System.out.println("\nEstudantes Aprovados em Tecnologia em Sistemas para Internet (TSI):");
         alunosSistemasInternet.forEach(s -> System.out.println("\t" + s));
         System.out.println("Total de Estudantes Aprovados em Sistemas para Internet: " + alunosSistemasInternet.size());
     }
 
-    private void imprimeTotalEstudantesMatriculados() {
-        final long totalEstudantesMatriculados =
+    private void imprimeEstudantesAgrupandoPorCurso() {
+        final Map<Course, List<Student>> estudantesAgrupadosPorCurso =
                 students.stream()
-                        .map(Student::getCourse)
-                        .filter(Objects::nonNull)
-                        .count();
-        System.out.printf("Total de Estudantes Matriculados: %d\n", totalEstudantesMatriculados);
+                        .filter(Student::hasCourse)
+                        .collect(Collectors.groupingBy(Student::getCourse));
+        System.out.println("\nEstudantes por curso");
+        estudantesAgrupadosPorCurso.forEach(
+                (course, students) -> System.out.printf("\t%-30s: Estudantes: %s\n", course.getName(), students)
+        );
     }
 
     private void imprimeTotalCampiComAlunos() {
@@ -100,42 +154,6 @@ public class AppProgramacaoFuncional {
                         .distinct()
                         .count();
         System.out.printf("Campi em que há Estudantes: %d\n", totalCampiComAlunos);
-    }
-
-    private void imprimeTotalMulheres() {
-        final long totalMulheres =
-                students.stream()
-                        .filter(s -> s.getGender() == 'F')
-                        .count();
-        System.out.println("Total de Mulheres: " + totalMulheres);
-    }
-
-    private void imprimeTotalHomens() {
-        final long totalHomens =
-            students.stream()
-                    .filter(s -> s.getGender() == 'M')
-                    .count();
-        System.out.println("Total de Homens: " + totalHomens);
-    }
-
-    private void imprimeMaiorNota() {
-        final double maior =
-                students.stream()
-                        .parallel()
-                        .mapToDouble(Student::getScore)
-                        .max()
-                        .orElse(0);
-        System.out.printf("Maior nota entre todos os Estudantes: %.2f\n", maior);
-    }
-
-    private void imprimeMaiorNotaHomens() {
-        final double maior =
-                students.stream()
-                        .filter(s -> s.getGender() == 'M')
-                        .mapToDouble(Student::getScore)
-                        .max()
-                        .orElse(0);
-        System.out.printf("Maior nota entre todos os Estudantes: %.2f\n", maior);
     }
 
     public static void main(String[] args) {
